--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
 
     implementation project(":data")
     implementation project(":domain")
-    
+    implementation project(":network")
+
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -75,10 +76,6 @@ dependencies {
     implementation "com.google.android.material:compose-theme-adapter:$compose_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
-
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
