--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.example.myapplication"
@@ -54,6 +54,7 @@ dependencies {
     implementation project(":data")
     implementation project(":domain")
     implementation project(":network")
+    implementation project(":database")
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
